Bug 268752 - Crash when knowledge base widget closed
Summary: Crash when knowledge base widget closed
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 274408 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-17 15:56 UTC by Yash
Modified: 2011-05-29 17:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yash 2011-03-17 15:56:50 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.1-1.2-desktop i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

Crashed when I closed the knowledge base widget on the desktop

-- Backtrace:
Application: Plasma Desktop Shell (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb5982710 (LWP 3847))]

Thread 2 (Thread 0xa9faeb70 (LWP 3943)):
#0  0xb5ca022b in clock_gettime () from /lib/librt.so.1
#1  0xb6e98ae5 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb6f6b726 in updateCurrentTime (this=0xaf001c74, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0xaf001c74, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb6f69f6b in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xa9fae11c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb6f6a00d in timerSourcePrepare (source=0xaf001c40, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb5beaa70 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0xb5beb8e2 in ?? () from /lib/libglib-2.0.so.0
#9  0xb5bebfce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0xb6f6a7b7 in QEventDispatcherGlib::processEvents (this=0x8559128, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb6f3b2bd in QEventLoop::processEvents (this=0xa9fae2b0, flags=...) at kernel/qeventloop.cpp:149
#12 0xb6f3b4e9 in QEventLoop::exec (this=0xa9fae2b0, flags=...) at kernel/qeventloop.cpp:201
#13 0xb6e3c7b9 in QThread::exec (this=0x84d62d0) at thread/qthread.cpp:490
#14 0xb6f1b23d in QInotifyFileSystemWatcherEngine::run (this=0x84d62d0) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb6e3f3aa in QThreadPrivate::start (arg=0x84d62d0) at thread/qthread_unix.cpp:285
#16 0xb6dc3b05 in start_thread () from /lib/libpthread.so.0
#17 0xb6180d5e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5982710 (LWP 3847)):
[KCrash Handler]
#7  QGraphicsView::mapFromScene (this=0x8bf1ce8, point=...) at graphicsview/qgraphicsview.cpp:2399
#8  0xb4d784e4 in Plasma::AppletHandle::mousePressEvent (this=0x93104b0, event=0xbfba69d4) at /usr/src/debug/kdelibs-4.6.0/plasma/private/applethandle.cpp:481
#9  0xb6ab48b0 in QGraphicsItem::sceneEvent (this=0x93104b8, event=0xbfba69d4) at graphicsview/qgraphicsitem.cpp:6698
#10 0xb4d7b6c5 in Plasma::AppletHandle::sceneEvent (this=0x93104b0, event=0xbfba69d4) at /usr/src/debug/kdelibs-4.6.0/plasma/private/applethandle.cpp:792
#11 0xb6adfbbe in QGraphicsScenePrivate::sendEvent (this=0x815c2a0, item=0x93104b8, event=0xbfba69d4) at graphicsview/qgraphicsscene.cpp:1207
#12 0xb6ae0888 in QGraphicsScenePrivate::sendMouseEvent (this=0x815c2a0, mouseEvent=0xbfba69d4) at graphicsview/qgraphicsscene.cpp:1281
#13 0xb6aea038 in QGraphicsScenePrivate::mousePressEventHandler (this=0x815c2a0, mouseEvent=0xbfba69d4) at graphicsview/qgraphicsscene.cpp:1406
#14 0xb6aea663 in QGraphicsScene::mousePressEvent (this=0x810c6d8, mouseEvent=0xbfba69d4) at graphicsview/qgraphicsscene.cpp:4053
#15 0xb6af48f4 in QGraphicsScene::event (this=0x810c6d8, event=0xbfba69d4) at graphicsview/qgraphicsscene.cpp:3437
#16 0xb6448414 in QApplicationPrivate::notify_helper (this=0x80bd458, receiver=0x810c6d8, e=0xbfba69d4) at kernel/qapplication.cpp:4445
#17 0xb64510c7 in QApplication::notify (this=0x80b3a70, receiver=0x810c6d8, e=0xbfba69d4) at kernel/qapplication.cpp:3845
#18 0xb75961f1 in KApplication::notify (this=0x80b3a70, receiver=0x810c6d8, event=0xbfba69d4) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#19 0xb6f3bfde in QCoreApplication::notifyInternal (this=0x80b3a70, receiver=0x810c6d8, event=0xbfba69d4) at kernel/qcoreapplication.cpp:732
#20 0xb644636d in sendSpontaneousEvent (receiver=0x810c6d8, event=0xbfba69d4) at ../../src/corelib/kernel/qcoreapplication.h:218
#21 qt_sendSpontaneousEvent (receiver=0x810c6d8, event=0xbfba69d4) at kernel/qapplication.cpp:5439
#22 0xb6b090aa in QGraphicsView::mousePressEvent (this=0x8e31278, event=0xbfba7134) at graphicsview/qgraphicsview.cpp:3162
#23 0xb64a3574 in QWidget::event (this=0x8e31278, event=0xbfba7134) at kernel/qwidget.cpp:8196
#24 0xb68b1ed5 in QFrame::event (this=0x8e31278, e=0xbfba7134) at widgets/qframe.cpp:557
#25 0xb69438a1 in QAbstractScrollArea::viewportEvent (this=0x8e31278, e=0xbfba7134) at widgets/qabstractscrollarea.cpp:1043
#26 0xb6b12dbc in QGraphicsView::viewportEvent (this=0x8e31278, event=0xbfba7134) at graphicsview/qgraphicsview.cpp:2864
#27 0xb6946196 in viewportEvent (this=0x93f5b68, o=0x8b7a308, e=0xbfba7134) at widgets/qabstractscrollarea_p.h:100
#28 QAbstractScrollAreaFilter::eventFilter (this=0x93f5b68, o=0x8b7a308, e=0xbfba7134) at widgets/qabstractscrollarea_p.h:116
#29 0xb6f3c176 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x80bd458, receiver=0x8b7a308, event=0xbfba7134) at kernel/qcoreapplication.cpp:847
#30 0xb64483e4 in QApplicationPrivate::notify_helper (this=0x80bd458, receiver=0x8b7a308, e=0xbfba7134) at kernel/qapplication.cpp:4441
#31 0xb6451c20 in QApplication::notify (this=0xbfba6e4c, receiver=0x8b7a308, e=0xbfba7134) at kernel/qapplication.cpp:4006
#32 0xb75961f1 in KApplication::notify (this=0x80b3a70, receiver=0x8b7a308, event=0xbfba7134) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#33 0xb6f3bfde in QCoreApplication::notifyInternal (this=0x80b3a70, receiver=0x8b7a308, event=0xbfba7134) at kernel/qcoreapplication.cpp:732
#34 0xb644945c in sendSpontaneousEvent (receiver=0x8b7a308, event=0xbfba7134, alienWidget=0x8b7a308, nativeWidget=0x8e31278, buttonDown=0xb6dbac00, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:218
#35 QApplicationPrivate::sendMouseEvent (receiver=0x8b7a308, event=0xbfba7134, alienWidget=0x8b7a308, nativeWidget=0x8e31278, buttonDown=0xb6dbac00, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3103
#36 0xb64d5030 in QETWidget::translateMouseEvent (this=0x8e31278, event=0xbfba764c) at kernel/qapplication_x11.cpp:4438
#37 0xb64d413e in QApplication::x11ProcessEvent (this=0x80b3a70, event=0xbfba764c) at kernel/qapplication_x11.cpp:3442
#38 0xb64fe960 in x11EventSourceDispatch (s=0x80bfbf8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#39 0xb5beb509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#40 0xb5bebd10 in ?? () from /lib/libglib-2.0.so.0
#41 0xb5bebfce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#42 0xb6f6a76b in QEventDispatcherGlib::processEvents (this=0x80a7300, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#43 0xb64fe55a in QGuiEventDispatcherGlib::processEvents (this=0x80a7300, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#44 0xb6f3b2bd in QEventLoop::processEvents (this=0xbfba7904, flags=...) at kernel/qeventloop.cpp:149
#45 0xb6f3b4e9 in QEventLoop::exec (this=0xbfba7904, flags=...) at kernel/qeventloop.cpp:201
#46 0xb6f3ff90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#47 0xb6446104 in QApplication::exec () at kernel/qapplication.cpp:3719
#48 0xb25ef8aa in kdemain (argc=1, argv=0x80995e8) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/desktop/shell/main.cpp:118
#49 0x0804e531 in _start ()

Possible duplicates by query: bug 253198, bug 245468.

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-03-17 16:48:08 UTC
Git commit 8265e88d5864baffcb50b473543404e68f506742 by Aaron Seigo.
Committed on 17/03/2011 at 16:46.
Pushed by aseigo into branch 'KDE/4.6'.

protect with a weak pointer

BUG:268752

M  +4    -4    plasma/private/applethandle.cpp     
M  +1    -1    plasma/private/applethandle_p.h     

http://commits.kde.org/kdelibs/8265e88d5864baffcb50b473543404e68f506742
Comment 2 Aaron J. Seigo 2011-03-17 16:48:08 UTC
Git commit 0b17818b43de9e96e279f913240debaf2c384bbb by Aaron Seigo.
Committed on 17/03/2011 at 16:46.
Pushed by aseigo into branch 'master'.

protect with a weak pointer

BUG:268752

M  +4    -4    plasma/private/applethandle.cpp     
M  +1    -1    plasma/private/applethandle_p.h     

http://commits.kde.org/kdelibs/0b17818b43de9e96e279f913240debaf2c384bbb
Comment 3 Beat Wolf 2011-05-29 17:34:18 UTC
*** Bug 274408 has been marked as a duplicate of this bug. ***