protect with a weak pointer

BUG:268752